--- a/public/css/membersStyle.css
+++ b/public/css/membersStyle.css
@@ -1,3 +1,14 @@
 #table {
     list-style-type: none;
 }
+
+#motivationalPoster {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+}
