--- a/views/demo.handlebars
+++ b/views/demo.handlebars
@@ -57,6 +57,30 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 {{!-- <script type="text/javascript" src="js/members.js"></script> --}}
 <script>
+const dropdownColumn = $("#mySidebar");
+motivationalPoster()
+    
+function motivationalPoster() {
+  var settings = {
+    async: true,
+    crossDomain: true,
+    url:
+      "https://healthruwords.p.rapidapi.com/v1/quotes/?t=Motivational&maxR=1&size=medium",
+    method: "GET",
+    headers: {
+      "x-rapidapi-host": "healthruwords.p.rapidapi.com",
+      "x-rapidapi-key": "aba3c7bdc1msh5b9a40821dbd03fp181584jsn6ee503254af2"
+    }
+  };
+
+  $.ajax(settings).then(response => {
+    // console.log(response);
+    $(
+      `<div class="w3-panel w3-card-2"><img src="${response[0].media}" id="motivationalPoster"></div>`
+    ).appendTo(dropdownColumn);
+  });
+}
+
 
     const path = location.search.split("=")[1] || 'Pushups'
     $("#workout").val(path)
