deleted demo.handlebars file

--- a/views/demo.handlebars
+++ b/views/demo.handlebars
@@ -2,7 +2,7 @@
 <div class="w3-bar w3-top w3-cyan w3-large" style="z-index:4">
     <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i
             class="fa fa-bars"></i>  Menu</button>
-    <a href="https://github.com/kberner14/30-Days" style="padding: 0px" class="w3-bar-item w3-button w3-right "><span
+    <a href="https://github.com/markprodehl/HandleBars-30Days" style="padding: 0px" class="w3-bar-item w3-button w3-right "><span
             class="w3-bar-item w3-right "><i class="fa fa-github "></i>
             GitHub Repo</span></a>
 </div>
